
    * ``RepositoryFormat`` objects now all have a new attribute
      ``_serializer`` used by fetch when reserialising is required.
      (Robert Collins, Andrew Bennetts)

    * Some methods have been pulled up from ``BzrBranch`` to ``Branch``
      to aid branch types that are not bzr branch objects (like
      RemoteBranch). (Robert Collins, Andrew Bennetts)

    * The ``_index`` of ``KnitVersionedFiles`` now supports the ability
      to scan an underlying index that is going to be incorporated into
      the ``KnitVersionedFiles`` object, to determine if it has missing
      delta references. The method is ``scan_unvalidated_index``.
      (Andrew Bennetts, Robert Collins)

    * There is a RemoteSink object which handles pushing to smart servers.
      (Andrew Bennetts, Robert Collins)

    * ``VersionedFiles`` record adapters have had their signature change
      from ``(record, record.get_bytes_as(record.storage_kind))`` to
      ``(record)`` reducing excess duplication and allowing adapters
      to access private data in record to obtain content more
      efficiently. (Robert Collins)

    * We no longer probe to see if we should create a working tree during
      clone if we cannot get a local_abspath for the new bzrdir.
      (Robert Collins)


bzr 1.12 "1234567890" 2009-02-13
--------------------------------

This release of Bazaar contains many improvements to the speed,
documentation and functionality of ``bzr log`` and the display of logged
revisions by ``bzr status``.  bzr now also gives a better indication of
progress, both in the way operations are drawn onto a text terminal, and
by showing the rate of network IO.

  BUG FIXES:

    * ``bzr init --development-wt5[-rich-root]`` would fail because of
      circular import errors. (John Arbash Meinel, #328135)

  DOCUMENTATION:

    * Expanded the help for log and added a new help topic called
      ``log-formats``.  (Ian Clatworthy)


bzr 1.12rc1 "1234567890" 2009-02-10